--- a/Interface_Layer/Views/Opciones.html
+++ b/Interface_Layer/Views/Opciones.html
@@ -114,5 +114,6 @@
     <script type="text/javascript" src="../Angular/myApp.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/menusCtrl.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/opcionCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/opcionFctr.js"></script>
 </body>
 </html>
