--- a/Interface_Layer/Views/Perfiles.html
+++ b/Interface_Layer/Views/Perfiles.html
@@ -106,5 +106,6 @@
     <script type="text/javascript" src="../Angular/myApp.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/menusCtrl.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/perfilCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/perfilFctr.js"></script>
 </body>
 </html>
