--- a/Interface_Layer/Views/Permisos.html
+++ b/Interface_Layer/Views/Permisos.html
@@ -189,5 +189,15 @@
     <script type="text/javascript" src="../Angular/myApp.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/menusCtrl.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/permisoCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/perfilFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/usuarioFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/rolFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/perfilusuariorolFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/sistemaFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/moduloFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/menuFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/opcionFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/menuopcionFctr.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/permisoFctr.js"></script>
 </body>
 </html>
