--- a/Interface_Layer/Views/Roles.html
+++ b/Interface_Layer/Views/Roles.html
@@ -104,5 +104,6 @@
     <script type="text/javascript" src="../Angular/myApp.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/menusCtrl.js"></script>
     <script type="text/javascript" src="../Angular/Controllers/rolCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/Factories/rolFctr.js"></script>
 </body>
 </html>
