--- a/Interface_Layer/Views/Menus.html
+++ b/Interface_Layer/Views/Menus.html
@@ -70,13 +70,13 @@
                 <div class="container-fluid form-group">
                     <label for="cmbSistema" class="col-md-2 control-label">Sistema: </label>
                     <div class="col-md-8">
-                        <select id="cmbSistema" class="form-control" ng-options="sistema.Nombre for sistema in sistemas track by sistema.Id" data-ng-model="mymenu.Sistema" ng-change="buscarModulo()"></select>
+                        <select id="cmbSistema" class="form-control" ng-options="sistema.Nombre for sistema in sistemas track by sistema.Id" data-ng-model="mymenu.Sistema" ng-change="buscarModulo()" required></select>
                     </div>
                 </div>
                 <div class="container-fluid form-group">
                     <label for="cmbModulo" class="col-md-2 control-label">Modulo: </label>
                     <div class="col-md-8">
-                        <select id="cmbModulo" class="form-control" ng-options="modulo.Nombre for modulo in modulos track by modulo.Id" data-ng-model="mymenu.Modulo"></select>
+                        <select id="cmbModulo" class="form-control" ng-options="modulo.Nombre for modulo in modulos track by modulo.Id" data-ng-model="mymenu.Modulo" required></select>
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
