--- a/Interface_Layer/Views/Usuarios.html
+++ b/Interface_Layer/Views/Usuarios.html
@@ -178,7 +178,7 @@
                         <td>{{usuario.UnicoIngreso}}</td>
                         <td>{{usuario.OtrosLogeos}}</td>
                         <td>{{usuario.Tipo}}</td>
-                        <td>{{usuario.Estado}}</td>
+                        <td>{{usuario.Activo}}</td>
                         <td>{{usuario.ApellidoPaterno}} {{usuario.ApellidoMaterno}} {{usuario.Nombres}}</td>
                         <td>
                             <p>
